--- a/nfccss.css
+++ b/nfccss.css
@@ -99,4 +99,16 @@ button {
     border: none;
     background-color: #444;
     color: white;
+
+/* Remove number input spinners on all browsers */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 }
