--- a/style.css
+++ b/style.css
@@ -87,4 +87,15 @@ body {
 @keyframes pulse {
     from { transform: scale(1); opacity: 0.9; }
     to { transform: scale(1.2); opacity: 1; }
+
+    /* Remove number input spinners on Chrome, Edge, Safari */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Remove number input spinners on Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
 }
